fix: hidden timeline on mobile web browser

--- a/ui/src/styles.css
+++ b/ui/src/styles.css
@@ -77,11 +77,17 @@
 }
 
 @layer base {
+  html,
+  body {
+    height: 100%;
+  }
+
   * {
     @apply border-border outline-ring/50;
   }
   body {
-    height: 100vh;
+    min-height: 100vh;
+    min-height: 100dvh;
     overflow: hidden;
     @apply bg-secondary/25 text-foreground;
   }
